# adk-agents-phoenix

./: .env  .env.example  Makefile  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  agents_database.db  main.py  main_bitcoin_test.py  main_skills.py  pyproject.toml
app/: __init__.py  adk_agents.py
app/agents/: __init__.py  base_agent.py  bitcoin_agent.py  skills_agent.py
app/agents/skills/weather-skill/: SKILL.md
app/config/: __init__.py  settings.py
app/logging/: __init__.py  logger.py
app/models/: __init__.py  model_factory.py
app/services/: __init__.py  postgres_session_service.py  sqlite_session_service.py
app/streaming/: __init__.py  sse_stream.py
app/tools/: __init__.py  bitcoin.py  weather.py
app/tracing/: __init__.py  phoenix_tracer.py
docs_ref/: BITCOIN_AGENT.md  BITCOIN_AGENT_SETUP.md  BITCOIN_MCP_SETUP.md  BITCOIN_TEST_GUIDE.md  DESIGN_SPEC.md  ENV_LOADING_README.md  MCP_INTEGRATION.md  QUICKSTART_BITCOIN.md  SQLITE_SESSION_SERVICE.md
examples/: __init__.py  add_agent_example.py  add_tool_example.py  bitcoin_agent_example.py  model_switching_example.py  sqlite_enhanced_session_example.py  sqlite_session_example.py
test/: test_bitcoin_tools.py  test_env_loading.py  test_phoenix_project.py  test_sqlite_session_service.py  verify_phoenix_config.py
